<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZuSpät?!</string>
    <string name="title_activity_main">ZuSpät?!</string>
    <string name="settings_menu_item">Einstellungen</string>
    <string name="database_menu_item">Daten</string>
    <string name="change_log_menu_item">Änderungen</string>
    <string name="about_menu_item">Info</string>
    <string name="tooLate_info_msg" formatted="false"><![CDATA[<table border="0"><tbody><tr><td valign="top">Version:</td><td>{0}</td></tr><tr><td valign="top">Date:</td><td>{1}</td></tr><tr><td valign="top">Author:</td><td>Thorsten Schenkel</td></tr><tr><td valign="top">Homepage:</td><td><a href="http://www.t7soft.de/html/joomla_t7soft/index.php"> www.t7soft.de </a></td></tr><tr><td valign="top">third-party:</td><td><a href="https://icons8.com/">Icons8</a><br/><a href="http://petoria.de/android-change-log/">Android Change Log</a><br/><a href="https://github.com/amlcurran/ShowcaseView">ShowcaseView</a></td></tr></tbody></table>]]></string>
    <!-- Common -->
    <string name="empty"></string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="add">Hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="time_picker">Zeitauswahl</string>
    <string name="date_picker">Datumauswahl</string>
    <!-- Settings -->
    <string name="settings_sub_tilte">Einstellungen</string>
    <string name="settings_delay">Verspätung</string>
    <string name="settings_delay_on_time">pünktlich</string>
    <string name="settings_delay_slight">leicht verspätet</string>
    <string name="settings_delay_late">verspätet</string>
    <string name="settings_delay_extrem">extrem verspätet</string>
    <string name="settings_min">min</string>
    <string name="settings_min_hint">min</string>
    <string name="settings_lt">&lt;</string>
    <string name="settings_ge">&#8805;</string>
    <string name="settings_error_no_value">Wert fehlt oder Zahl ist ungültig!</string>
    <string name="settings_error_slight">Wert von \"leicht verspätet\" muss größer dem Wert von \"pünktlich\" sein!!</string>
    <string name="settings_error_late">Wert von \"verspätet\" muss größer dem Wert von \"leicht verspätet\" sein!!</string>
    <string name="settings_misc">Sonstiges</string>
    <string name="settings_quick_guide">Kurzanleitung erneut anzeigen</string>
    <!-- Database -->
    <string name="database_sub_tilte">Daten</string>    
    <string name="export_button">Export</string>    
    <string name="import_button">Import</string>    
    <string name="close_button">Schließen</string>    
    <!-- Tabs -->
    <!-- Capture -->
    <string name="capture_tab_tilte">Erfassen</string>
    <string name="canceled">Ausgefallen</string>
    <string name="capture">Angekommen</string>
    <string name="capture_connection">Verbindung</string>
    <string name="capture_planed_end">Planmäßige Ankunft</string>
    <string name="capture_current">Aktuell</string>
    <string name="capture_planed_end_value"><![CDATA[<b>{0}</b>&nbsp;&nbsp;in&nbsp;&nbsp;<b>{1}</b>]]></string>
    <string name="capture_no_connection"><![CDATA[<i>Keine Daten zur Ankunft!<i>]]></string>
    <string name="capture_current_value"><![CDATA[<b>{0}</b>]]></string>
    <string name="capture_no_current"><![CDATA[<i>--:--<i>]]></string>
    <string name="capture_saved">Ankunft gespeichert</string>
    <string name="capture_dummy_comment">Comment</string>
    <!-- Connections -->
    <string name="connections_tab_tilte">Verbindungen</string>
    <string name="add_menu_item">Hinzufügen</string>
    <string name="open_menu_item">Öffnen</string>
    <string name="edit_menu_item">Bearbeiten</string>
    <string name="delete_menu_item">Löschen</string>
    <string name="share_menu_item">Teilen</string>
    <string name="connection_dummy_name">Dummy-Name</string>
    <string name="connection_dummy_time">12:34</string>
    <string name="connection_dummy_station">Dummy-Station</string>
    <!-- Show Connection -->
    <string name="show_connection_sub_tilte">Verbindungsdetails</string>
    <!-- Edit Connection -->
    <string name="add_connection_sub_tilte">Verbindung hinzufügen</string>
    <string name="edit_connection_sub_tilte">Verbindung ändern</string>
    <string name="connection_name">Name</string>
    <string name="connection_name_hint">z.B. Zugnummer RE 4456</string>
    <string name="connection_type_hint">Art der Verbindung</string>
    <string name="connection_start">Abfahrt</string>
    <string name="connection_end">Ankunft</string>
    <string name="connection_station">Ort</string>
    <string name="connection_station_hint">Haltstelle</string>
    <string name="connection_time">Zeit</string>
    <string name="connection_weekdays">Wochentage</string>
    <string name="connection_mo_fr">Mon.-Frei.</string>
    <string name="connection_sa">Samstag</string>
    <string name="connection_su">Sonntag</string>
    <string name="connection_error_no_name">Name fehlt!</string>
    <string name="connection_error_no_start_station">Abfahrtsort fehlt!</string>
    <string name="connection_error_no_end_station">Ankunftsort fehlt!</string>
    <string name="connection_error_no_weekday">Kein Wochentag wurde ausgewählt!</string>
    <string name="connection_error_no_start_time">Abfahrtszeit fehlt oder ist nicht korrekt!</string>
    <string name="connection_error_no_end_time">Ankunftszeit fehlt oder ist nicht korrekt!</string>
    <string name="connection_error_end_time">Ankunftzeit liegt nicht nach Abfahrtszeit!</string>
    <string name="connection_error_insert">Verbindung konnte nicht gespeichert werden!</string>
    <string name="connection_error_update">Verbindung konnte nicht gespeichert werden!</string>
    <string name="connection_error_weekdays">Es muss mindestens ein Wochentag ausgewählt sein!</string>
    <string name="connection_error_msg_title">Fehler</string>
    <string name="connection_delete_msg_title">Löschen</string>
    <string name="connection_delete_msg_text">Soll die Verbindung \"{0}\" gelöscht werden?</string>
    <!-- Analysis -->
    <string name="analysis_tab_tilte">Auswertung</string>
    <string name="filter_menu_item">Filter</string>
    <string name="analysis_view">Ansicht</string>
    <string name="analysis_dummy_month">September 2016</string>
    <string name="analysis_dummy_week">Mo., 09.03.2016 - So., 17.03.2016</string>
    <string name="analysis_dummy_date_time">Mi., 09.03.2016 14:20</string>
    <string name="analysis_dummy_date">Mi., 09.03.2016</string>
    <string name="analysis_dummy_time">14:20</string>
    <string name="analysis_dummy_delay">+ 1 min</string>
    <string name="analysis_dummy_times">5x</string>
    <string name="analysis_delay_canceled">ausgefallen</string>
    <string name="analysis_delay_total">Gesamt</string>
    <string name="analysis_no_captures">keine Aufzeichnung</string>
    <string name="capture_comment">Anmerkung</string>
    <string name="capture_comment_hint">Anmerkung eingeben</string>
    <string name="capture_comment_saved">Anmerkung gespeichert</string>
    <string name="capture_delete_msg_title">Löschen</string>
    <string name="capture_delete_msg_text">Soll die Aufzeichnung vom \"{0}\" gelöscht werden?</string>
    <string name="filter_sub_tilte">Filter</string>
    <string name="filter_">Filter</string>
    <string name="filter_on">an</string>
    <string name="filter_off">aus</string>
    <string name="filter_period">Zeitraum</string>
    <string name="filter_from">von</string>
    <string name="filter_to">bis</string>
    <string name="filter_delay">Verspätung</string>
    <string name="filter_delay_on_time">pünktlich</string>
    <string name="filter_delay_slight">leicht verspätet</string>
    <string name="filter_delay_late">verspätet</string>
    <string name="filter_delay_extrem">extrem verspätet</string>
    <!-- Edit Capture -->
    <string name="edit_capture_sub_tilte">Aufzeichnung bearbeiten</string>
    <!-- Week Picker -->
    <string name="picker_next_week">Nächste Woche</string>
    <string name="picker_prev_week">Vorherige Woche</string>
    <string name="picker_this_week">Diese Woche</string>
    <!-- Month Picker -->
    <string name="picker_next_month">Nächster Monat</string>
    <string name="picker_prev_month">Vorheriger Monat</string>
    <string name="picker_this_month">Dieser Monat</string>
    <!-- ChangeLog -->
    <string name="changelog_full_title">Änderungsverlauf</string>
    <string name="changelog_title">Neuigkeiten</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">mehr...</string>
    <string name="background_color">white</string>
    <!-- Showcase -->
    <string name="showcase_connections_title">Verbindungen</string>
    <string name="showcase_connections_message">Zuerst trägst du hier all deine regelmäßgen Verbindungen (Zug, Bus usw.) ein.</string>
    <string name="showcase_capture_title">Erfassen</string>
    <string name="showcase_capture_message">Sobald du am Ziel angekommen bist, wird von dir die Ankunftszeit erfasst.</string>
    <string name="showcase_analysis_title">Auswertung</string>
    <string name="showcase_analysis_message">An dieser Stelle werden all deine Aufzeichnungen aufgelistet.</string>
    <string name="showcase_next">Weiter</string>
    <string name="showcase_close">Schließen</string>

</resources>