<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.t7soft.android.t7TooLate.MainActivity" >
    
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:enabled="true"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/filter_menu_item"/>
        
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:enabled="true"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/settings_menu_item"/>
        
    <item android:id="@+id/action_database" android:title="@string/database_menu_item" android:visible="true" android:enabled="true" android:showAsAction="never"></item><item
        android:id="@+id/action_change_log"
        android:enabled="true"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/change_log_menu_item"/>    
    
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_dark_about"
        android:enabled="true"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/about_menu_item"/>
        
    
</menu>
