<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/subtitle_background"
        android:paddingLeft="@dimen/subtitle_paddingX" >

        <ImageView
            android:id="@+id/imageViewFilterSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/filter_sub_tilte"
            android:src="@drawable/ic_filter" />

        <TextView
            android:id="@+id/textViewFilterSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/subtitle_paddingY"
            android:paddingLeft="@dimen/subtitle_paddingX"
            android:paddingRight="@dimen/subtitle_paddingX"
            android:paddingTop="@dimen/subtitle_paddingY"
            android:text="@string/filter_sub_tilte"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/subtitle_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Switch
                android:id="@+id/switchPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="0dp"
                android:text="@string/empty"
                android:textOff="@string/filter_off"
                android:textOn="@string/filter_on" />

            <TextView
                android:id="@+id/textViewPeridod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/filter_period"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/header_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPeriodFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFilterFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextFilterFrom"
                android:minWidth="30dp"
                android:text="@string/filter_from"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextFilterFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:onClick="onStartDate"
                android:singleLine="true"
                android:textColor="@android:color/primary_text_light_nodisable" />

            <ImageButton
                android:id="@+id/buttonFilterFrom"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_background"
                android:contentDescription="@string/date_picker"
                android:minHeight="24dip"
                android:minWidth="24dip"
                android:onClick="onStartDate"
                android:padding="7dp"
                android:src="@drawable/ic_calendar_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPeriodTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFilterTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextFilterTo"
                android:minWidth="30dp"
                android:text="@string/filter_to"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextFilterTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:onClick="onEndDate"
                android:singleLine="true"
                android:textColor="@android:color/primary_text_light_nodisable" />

            <ImageButton
                android:id="@+id/buttonFilterTo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_background"
                android:contentDescription="@string/date_picker"
                android:minHeight="24dip"
                android:minWidth="24dip"
                android:onClick="onEndDate"
                android:padding="7dp"
                android:src="@drawable/ic_calendar_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Switch
                android:id="@+id/switchDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="0dp"
                android:text="@string/empty"
                android:textOff="@string/filter_off"
                android:textOn="@string/filter_on" />

            <TextView
                android:id="@+id/textViewDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/filter_delay"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/header_text" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxOnTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/filter_delay_on_time" />

        <CheckBox
            android:id="@+id/checkBoxSlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/filter_delay_slight" />

        <CheckBox
            android:id="@+id/checkBoxLate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/filter_delay_late" />

        <CheckBox
            android:id="@+id/checkBoxExterm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/filter_delay_extrem" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonConnectionCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn_background"
                android:onClick="onOk"
                android:text="@string/ok"
                android:textColor="@color/btn_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>