<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/subtitle_background"
        android:paddingLeft="@dimen/subtitle_paddingX" >

        <ImageView
            android:id="@+id/imageViewEditConnectionSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit_connection_sub_tilte"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/textViewEditConnectionSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/subtitle_paddingY"
            android:paddingLeft="@dimen/subtitle_paddingX"
            android:paddingRight="@dimen/subtitle_paddingX"
            android:paddingTop="@dimen/subtitle_paddingY"
            android:text="@string/edit_connection_sub_tilte"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/subtitle_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textViewConnectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text" />

        <EditText
            android:id="@+id/editTextConnectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/connection_name_hint"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewConnectionStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/connection_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewConnectionStartStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextConnectionStartStation"
                android:minWidth="40dp"
                android:text="@string/connection_station"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextConnectionStartStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/connection_station_hint"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewConnectionStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextConnectionStartTime"
                android:minWidth="40dp"
                android:text="@string/connection_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextConnectionStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:onClick="onStartTime"
                android:singleLine="true"
                android:textColor="@android:color/primary_text_light_nodisable" />

            <ImageButton
                android:id="@+id/buttonConnectionStartTime"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_background"
                android:contentDescription="@string/time_picker"
                android:minHeight="24dip"
                android:minWidth="24dip"
                android:onClick="onStartTime"
                android:padding="7dp"
                android:src="@drawable/ic_clock_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewConnectionEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/connection_end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewConnectionEndStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextConnectionEndStation"
                android:minWidth="40dp"
                android:text="@string/connection_station"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextConnectionEndStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/connection_station_hint"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewConnectionEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:labelFor="@+id/editTextConnectionEndTime"
                android:minWidth="40dp"
                android:text="@string/connection_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextConnectionEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:onClick="onEndTime"
                android:singleLine="true"
                android:textColor="@android:color/primary_text_light_nodisable" />

            <ImageButton
                android:id="@+id/buttonConnectionEndTime"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_background"
                android:contentDescription="@string/time_picker"
                android:minHeight="24dip"
                android:minWidth="24dip"
                android:onClick="onEndTime"
                android:padding="7dp"
                android:src="@drawable/ic_clock_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewConnectionWeekdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/connection_weekdays"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/header_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkBoxConnectionMoFr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/connection_mo_fr" />

            <CheckBox
                android:id="@+id/checkBoxConnectionSa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/connection_sa" />

            <CheckBox
                android:id="@+id/checkBoxConnectionSu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/connection_su" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonConnectionSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/btn_background"
                android:onClick="onSave"
                android:text="@string/save"
                android:textColor="@color/btn_text" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/buttonConnectionCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/btn_background"
                android:onClick="onCancel"
                android:text="@string/cancel"
                android:textColor="@color/btn_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>