<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/buttonMonthPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_bar_button"
        android:contentDescription="@string/picker_prev_week"
        android:minHeight="@dimen/week_peek_button_size"
        android:minWidth="@dimen/week_peek_button_size"
        android:src="@drawable/ic_previous_small" />

    <TextView
        android:id="@+id/textViewMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonMonthPrev"
        android:layout_alignTop="@+id/buttonMonthPrev"
        android:layout_toRightOf="@+id/buttonMonthPrev"
        android:gravity="center"
        android:minWidth="150dp"
        android:padding="4dp"
        android:text="@string/analysis_dummy_month"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/buttonMonthNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonMonthPrev"
        android:layout_alignTop="@+id/buttonMonthPrev"
        android:layout_toRightOf="@+id/textViewMonth"
        android:background="@drawable/button_bar_button"
        android:contentDescription="@string/picker_next_week"
        android:minHeight="@dimen/week_peek_button_size"
        android:minWidth="@dimen/week_peek_button_size"
        android:src="@drawable/ic_next_small" />

    <ImageButton
        android:id="@+id/buttonMonthThis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonMonthPrev"
        android:layout_alignTop="@+id/buttonMonthPrev"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/buttonMonthNext"
        android:background="@drawable/button_bar_button"
        android:contentDescription="@string/picker_this_week"
        android:minHeight="@dimen/week_peek_button_size"
        android:minWidth="@dimen/week_peek_button_size"
        android:src="@drawable/ic_today_small" />

</RelativeLayout>